Update src/test/java/bio/terra/service/filedata/azure/AzureSynapsePdaoConnectedTest.java
Co-authored-by: Trevyn Langsford <tlangs@broadinstitute.org>